2013-05-15  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.4.0-rc3 Released.

	* Fix VM snapshot handling for combined INBOX.

	  The snapshot API contains an option that allow for combining of new
	  and old messages within a single snapshot. New messages, however,
	  include options beyond just 'INBOX' - it also includes the Urgent
	  folder. A previous patch that combined INBOX and Urgent accidentally
	  impacted snapshots that attempted to gain messages from just the Old
	  folder. This patch fixes the snapshot gathering such that the API
	  returns the appropriate messages for the folder selected, with and
	  without the combine option.

2013-05-09  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.4.0-rc2 Released.

	* Fix Segfault In app_queue When "persistentmembers" Is Enabled And
	  Using Realtime

	  When the "ignorebusy" setting was deprecated, we added some code to
	  allow us to be compatible with older setups that are still using the
	  "ignorebusy" setting instead of "ringinuse".  We set a char *variable
	  with the column name to use, which helps the realtime functions to
	  use the correct column in their SQL queries.  When "persistentmembers"
	  is enabled, we are not setting this variable before the realtime
	  functions were called to load members.  This results in the variable
	  being NULL and therefore causing a segfault when loading members
	  during the module's process of loading.

	  The solution was to move the code that sets that variable to be
	  before these realtime functions are called during the loading of the
	  module.

	* Distributed Device State broken at sites using res_xmpp or res_jabber
	  where Secuity Advisory AST-2012-015 is inplace

	  res_jabber/res_xmpp were not adding AST_EVENT_IE_CACHABLE to the
	  event as each message came in, then devstate_change_collector_cb()
	  was unable to find AST_EVENT_IE_CACHABLE in the event, so defaulted
	  incorrectly to AST_DEVSTATE_NOT_CACHABLE.